--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,84 +5,84 @@
     <string name="facebook_client_token">dbb08b348d22dfd6f41cddd4c8f49486</string>
 
     <string name="app_name">TikTok</string>
-    <string name="change_password">Change password</string>
-    <string name="enter_old_password">Enter old password</string>
-    <string name="old_password">Old password</string>
-    <string name="enter_new_password">Enter new password</string>
-    <string name="new_password">New password</string>
-    <string name="confirm_new_password">Confirm new password</string>
-    <string name="edit_info">Edit information</string>
-    <string name="personnal_info">Personnal information</string>
-    <string name="full_name">Full name</string>
-    <string name="phone_number">Phone number</string>
+    <string name="change_password">Đổi mật khẩu</string>
+    <string name="enter_old_password">Nhập mật khẩu cũ</string>
+    <string name="old_password">Mật khẩu cũ</string>
+    <string name="enter_new_password">Nhâp mật khẩu mới</string>
+    <string name="new_password">Mật khẩu mới</string>
+    <string name="confirm_new_password">Nhâp lại mật khẩu mới</string>
+    <string name="edit_info">Chỉnh sửa thông tin</string>
+    <string name="personnal_info">Thông tin cá nhân</string>
+    <string name="full_name">Họ và tên</string>
+    <string name="phone_number">Số điện thoại</string>
     <string name="email">Email</string>
-    <string name="save">Save</string>
-    <string name="account">Account</string>
-    <string name="delete_account">Delete account</string>
-    <string name="login">Login</string>
-    <string name="email_or_username">Email or username</string>
-    <string name="password">Password</string>
-    <string name="login_with">Login with:</string>
-    <string name="forgot_password">Forgot password?</string>
-    <string name="don_t_have_an_account">Don\'t have an account?</string>
-    <string name="register_now">Register now!</string>
-    <string name="register">Register</string>
-    <string name="follow">Follow</string>
-    <string name="likes">Likes</string>
-    <string name="followers">Followers</string>
-    <string name="following">Following</string>
-    <string name="comment">Comment</string>
-    <string name="username">Username</string>
-    <string name="confirm_password">Confirm password</string>
-    <string name="back">Back</string>
-    <string name="next">Next</string>
-    <string name="notification">Notification</string>
-    <string name="enter_video_content">Enter video content</string>
-    <string name="post">Post</string>
-    <string name="not_login_in_profile_fragment">You are not login!\nPlease login to see your profile.</string>
-    <string name="or">or</string>
-    <string name="search">Search</string>
-    <string name="search_not_found">Search not found! :((</string>
-    <string name="delete">Delete</string>
-    <string name="reply">Reply</string>
-    <string name="copy">Copy</string>
-    <string name="share">Share</string>
-    <string name="logout">Logout</string>
-    <string name="report">Report</string>
-    <string name="already_have_an_account">Already have an account?</string>
-    <string name="login_now">Login now!</string>
-    <string name="admin">Admin</string>
-    <string name="dashboard">Dashboard</string>
-    <string name="admin_panel">Admin panel</string>
-    <string name="exit_confirm">Are you sure you want to exit?</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
-    <string name="search_video_or_user">Search video or user</string>
-    <string name="edit_profile">Edit profile</string>
-    <string name="number_of_new_views">Number of new views</string>
-    <string name="number_of_new_likes">Number of new likes</string>
-    <string name="number_of_new_comments">Number of new comments</string>
-    <string name="number_of_new_videos">Number of new videos</string>
-    <string name="number_of_new_users">Number of new users</string>
-    <string name="number_of_new_reports">Number of new reports</string>
-    <string name="statistic_in_week">Statistic in last 7 days</string>
-    <string name="today">Today</string>
-    <string name="month">Month</string>
-    <string name="year">Year</string>
-    <string name="all_time">All time</string>
-    <string name="statistic_month">Statistic in this month</string>
-    <string name="statistic_year">Statistic in this year</string>
-    <string name="statistic_all_time">Statistic all time</string>
-    <string name="users">Users</string>
-    <string name="comments">Comments</string>
+    <string name="save">Lưu</string>
+    <string name="account">Tài khoản</string>
+    <string name="delete_account">Xóa tài khoản</string>
+    <string name="login">Đăng nhập</string>
+    <string name="email_or_username">Email hoặc tên tài khoản</string>
+    <string name="password">Mật khẩu</string>
+    <string name="login_with">Đăng nhập với:</string>
+    <string name="forgot_password">Quên mật khẩu?</string>
+    <string name="don_t_have_an_account">Chưa có tài khoản?</string>
+    <string name="register_now">Đăng ký ngay!</string>
+    <string name="register">Đăng ký</string>
+    <string name="follow">Theo dõi</string>
+    <string name="likes">Lượt thích</string>
+    <string name="followers">Người theo dõi</string>
+    <string name="following">Đang theo dõi</string>
+    <string name="comment">Bình luận</string>
+    <string name="username">Tên tài khoản</string>
+    <string name="confirm_password">Xác nhận mật khẩu</string>
+    <string name="back">Trở lại</string>
+    <string name="next">Tiếp tục</string>
+    <string name="notification">Thông báo</string>
+    <string name="enter_video_content">Nhập mô tả video</string>
+    <string name="post">Đăng</string>
+    <string name="not_login_in_profile_fragment">Bạn chưa đăng nhập!\nHãy đăng nhập để sử dụng tính năng này!</string>
+    <string name="or">hoặc</string>
+    <string name="search">Tìm kiếm</string>
+    <string name="search_not_found">Không tìm thấy! :((</string>
+    <string name="delete">Xóa</string>
+    <string name="reply">Trả lời</string>
+    <string name="copy">Sao chép</string>
+    <string name="share">Chia sẻ</string>
+    <string name="logout">Đăng xuất</string>
+    <string name="report">Báo cáo</string>
+    <string name="already_have_an_account">Bạn đã có tài khoản?</string>
+    <string name="login_now">Đăng nhập ngay!</string>
+    <string name="admin">Quản trị viên</string>
+    <string name="dashboard">Bảng điều khiển</string>
+    <string name="admin_panel">Trang quản trị</string>
+    <string name="exit_confirm">Bạn có chắc chắn muốn thoát?</string>
+    <string name="yes">Có</string>
+    <string name="no">Không</string>
+    <string name="search_video_or_user">Tìm kiếm video hoặc người dùng</string>
+    <string name="edit_profile">Chỉnh sửa thông tin</string>
+    <string name="number_of_new_views">Lượt xem mới</string>
+    <string name="number_of_new_likes">Lượt thích mới</string>
+    <string name="number_of_new_comments">Bình luận mới</string>
+    <string name="number_of_new_videos">Video mới</string>
+    <string name="number_of_new_users">Người dùng mới</string>
+    <string name="number_of_new_reports">Báo cáo mới</string>
+    <string name="statistic_in_week">Thống kê 7 ngày gần nhất</string>
+    <string name="today">Hôm nay</string>
+    <string name="month">Tháng</string>
+    <string name="year">Năm nay</string>
+    <string name="all_time">Tất cả</string>
+    <string name="statistic_month">Thống kê trong tháng này</string>
+    <string name="statistic_year">Thống kê trong năm nay</string>
+    <string name="statistic_all_time">Thống kê tất cả</string>
+    <string name="users">Người dùng</string>
+    <string name="comments">Bình luận</string>
     <string name="videos">Videos</string>
-    <string name="filter">Filter:</string>
-    <string name="role">Role:</string>
-    <string name="number_of_views">Views</string>
-    <string name="number_of_likes">Likes</string>
-    <string name="number_of_comments">Comments</string>
-    <string name="date_upload">Date upload</string>
-    <string name="content">Content</string>
+    <string name="filter">Lọc:</string>
+    <string name="role">Quyền</string>
+    <string name="number_of_views">Lượt xem</string>
+    <string name="number_of_likes">Lượt thích</string>
+    <string name="number_of_comments">Lượt bình luận</string>
+    <string name="date_upload">Ngày tải lên</string>
+    <string name="content">Nội dung</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <!-- Strings used for fragments for navigation -->
